// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attentive's subscribeUser destination action: all fields 1`] = `
Object {
  "externalEventId": "*Cc5M#wXxFe",
  "locale": Object {
    "country": "US",
    "language": "en",
  },
  "occurredAt": "*Cc5M#wXxFe",
  "signUpSourceId": "*Cc5M#wXxFe",
  "singleOptIn": true,
  "subscriptionType": "MARKETING",
  "user": Object {
    "externalIdentifiers": Object {
      "customIdentifiers": Object {
        "userId": "testuserid",
      },
    },
  },
}
`;

exports[`Testing snapshot for Attentive's subscribeUser destination action: required fields 1`] = `
Object {
  "locale": Object {
    "country": "US",
    "language": "en",
  },
  "signUpSourceId": "*Cc5M#wXxFe",
  "subscriptionType": "MARKETING",
  "user": Object {
    "externalIdentifiers": Object {
      "customIdentifiers": Object {
        "userId": "testuserid",
      },
    },
  },
}
`;
